--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BigDigAppB</string>
     <string name="picture">Picture</string>
+    <string name="close_message">The BigDigAppB can\'t work without BigDigAppA and will be closed after a few seconds</string>
 </resources>
