added network manager, created methods for editing db on home fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BigDigAppB</string>
     <string name="picture">Picture</string>
     <string name="close_message">The BigDigAppB can\'t work without BigDigAppA and will be closed after a few seconds</string>
+    <string name="show_picture_error_message">Something went wrong, can\'t show a picture from your link</string>
 </resources>
